Ajout template chatbot

--- a/Notebooks/Recap.ipynb
+++ b/Notebooks/Recap.ipynb
@@ -751,6 +751,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bfb25984-2707-4280-a837-36bf8c11abb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9111c857-9d33-4c20-ad5d-eae00d2836e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8ab58f8e-47e8-42ff-9ec2-15f3b5a7da5e",
    "metadata": {},
    "outputs": [],
@@ -771,7 +787,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "question = \"Où puis-je obtenir mon avis de situation ?\"\n",
+    "question = \"Comment obtenir mon avis de situation ?\"\n",
     "result = qa_chain({\"query\": question})"
    ]
   },
@@ -806,6 +822,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a67fa8c0-6abe-4b3d-bd98-d48c7433e23f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Création du prompt pour le chatbot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3949164d-8b83-49bd-8053-b0334d021431",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template_chat = \"\"\"<s>[INST] <<SYS>>\n",
+    "\\n\n",
+    "Vous êtes un assistant conversationnel cordial et honnête, qui répond, uniquement en langue française, aux questions ou aux problèmes posés par un usager. Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer la réponse. \n",
+    "\\n<</SYS>>\n",
+    "\\n\n",
+    "À l'aide du contexte ci-dessous, répondez, uniquement en langue française, au problème suivant posé par un usager : {question}\n",
+    "\\n\\n\n",
+    "Contexte : \n",
+    "\\n\n",
+    "{context}\n",
+    "[/INST]\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e63c371-882b-4841-a1ac-87362b00709a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template_memory=PromptTemplate(input_variables=['chat_history', 'question'],\n",
+    "               template='''<s>[INST] <<SYS>>\n",
+    "\\n\n",
+    "Vous êtes un assistant conversationnel cordial et honnête, qui répond, \n",
+    "               uniquement en langue française, aux questions ou aux problèmes posés par un usager. \n",
+    "               Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, \n",
+    "               n'essayez pas d'inventer la réponse.\n",
+    "               \\n<</SYS>>\\n\n",
+    "               Historique de la conversation:\\n{chat_history}\n",
+    "               \\n À l'aide de l'historique de la conversation ci-dessus, et du contexte ci-dessous, répondez, \n",
+    "               uniquement en langue française, au problème suivant posé par un usager :\n",
+    "               \\nSuite de la conversation: {question}\\n[/INST]''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "32f3a3e6-ffda-412c-812a-8c99b4783f20",
    "metadata": {},
    "outputs": [],
@@ -816,7 +883,7 @@
     "from langchain.memory import ConversationBufferMemory\n",
     "memory = ConversationBufferMemory(\n",
     "    memory_key=\"chat_history\",\n",
-    "    return_messages=True"
+    "    return_messages=True)"
    ]
   },
   {
@@ -832,7 +899,8 @@
     "qa_memory = ConversationalRetrievalChain.from_llm(\n",
     "    llm,\n",
     "    retriever=retriever,\n",
-    "    memory=memory\n",
+    "    memory=memory,\n",
+    "    condense_question_prompt=template_memory\n",
     ")"
    ]
   },
@@ -844,8 +912,16 @@
    "outputs": [],
    "source": [
     "question = \"Où puis-je obtenir mon avis de situation ?\"\n",
-    "result = qa_memory({\"query\": question})"
+    "result = qa_memory({\"question\": question})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "922d403b-a8f1-41d3-9e07-d03c8c9e6f1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -865,7 +941,7 @@
    "outputs": [],
    "source": [
     "question = \"Je ne sais pas si mes données sont diffusées\"\n",
-    "result = qa_memory({\"query\": question})"
+    "result = qa_memory({\"question\": question})"
    ]
   },
   {
@@ -932,7 +1008,7 @@
     "    # define embedding\n",
     "    embeddings = HuggingFaceEmbeddings()\n",
     "    # create vector database from data\n",
-    "    vectordb = Chroma.from_documents(\n",
+    "    db = Chroma.from_documents(\n",
     "    documents=docs,\n",
     "    embedding=embeddings)\n",
     "    # define retriever\n",
@@ -947,6 +1023,17 @@
     "        return_generated_question=True,\n",
     "    )\n",
     "    return qa \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0287a4dc-385d-4575-abe2-b870669958b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install panel\n",
+    "pn.extension()"
    ]
   },
   {
