Ajout du compressor

--- a/Notebooks/Recap.ipynb
+++ b/Notebooks/Recap.ipynb
@@ -53,7 +53,9 @@
     "from langchain.globals import set_verbose\n",
     "set_verbose(True)\n",
     "from langchain.prompts import PromptTemplate\n",
-    "from langchain.chains import RetrievalQA"
+    "from langchain.chains import RetrievalQA\n",
+    "from langchain.retrievers import ContextualCompressionRetriever\n",
+    "from langchain.retrievers.document_compressors import LLMChainExtractor"
    ]
   },
   {
@@ -234,12 +236,62 @@
    "id": "dbbe9d70-881b-4660-b100-b82066a3ae48",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Compression : pour que les docs n'apparaissent pas en entier dans le prompt, pour diminuer le temps d'inférence"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5943b482-bebb-4a56-81f4-3239832f3170",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pretty_print_docs(docs):\n",
+    "    print(f\"\\n{'-' * 100}\\n\".join([f\"Document {i+1}:\\n\\n\" + d.page_content for i, d in enumerate(docs)]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5c5efb6-cd43-479e-b474-c9e89438894c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On a besoin de définir un LLM pour faire l'extraction\n",
+    "# En choisir un parmi ceux ci-dessous\n",
+    "compressor = LLMChainExtractor.from_llm(llm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bd3b1bc-aad9-4cbf-b119-3494175ca332",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compression_retriever = ContextualCompressionRetriever(\n",
+    "    base_compressor=compressor,\n",
+    "    base_retriever=vectordb.as_retriever()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72077975-d453-4a21-ab06-fa963e85f9d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"Je n'arrive pas à obtenir mon avis de situation\"\n",
+    "compressed_docs = compression_retriever.get_relevant_documents(question)\n",
+    "pretty_print_docs(compressed_docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9ce90f1-f337-4337-a4b0-4b185970f349",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -327,7 +379,7 @@
     "# Build prompt\n",
     "template = \"\"\"Vous êtes un assistant conversationnel cordial et honnête, qui répond, uniquement en langue française, aux questions ou aux problèmes posés par un usager. Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer la réponse.\n",
     "\n",
-    "À l'aide du contexte ci-dessous, répondez au problème suivant posé par un usager : {question}\n",
+    "À l'aide du contexte ci-dessous, répondez, uniquement en langue française, au problème suivant posé par un usager : {question}\n",
     "\n",
     "Contexte : \n",
     "\\n\n",
@@ -587,9 +639,10 @@
    "outputs": [],
    "source": [
     "# Run chain\n",
+    "# Pour utiliser le compresseur : chain_type=\"stuff\", retriever=compression_retriever\n",
     "qa_chain = RetrievalQA.from_chain_type(\n",
     "    llm,\n",
-    "    retriever=vectordb.as_retriever(),\n",
+    "    chain_type=\"stuff\", retriever=compression_retriever, \n",
     "    return_source_documents=True, verbose=True,\n",
     "    chain_type_kwargs={\"prompt\": QA_CHAIN_PROMPT}\n",
     ")"
