Ajout d'autres modèles

--- a/Notebooks/Recap.ipynb
+++ b/Notebooks/Recap.ipynb
@@ -55,7 +55,9 @@
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.chains import RetrievalQA\n",
     "from langchain.retrievers import ContextualCompressionRetriever\n",
-    "from langchain.retrievers.document_compressors import LLMChainExtractor"
+    "from langchain.retrievers.document_compressors import LLMChainExtractor\n",
+    "from langchain.memory import ConversationBufferMemory\n",
+    "from langchain.chains import ConversationalRetrievalChain"
    ]
   },
   {
@@ -172,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "persist_directory = 'chroma/'"
+    "persist_directory = './chroma/'"
    ]
   },
   {
@@ -260,8 +262,26 @@
    "source": [
     "# On a besoin de définir un LLM pour faire l'extraction\n",
     "# En choisir un parmi ceux ci-dessous\n",
-    "compressor = LLMChainExtractor.from_llm(llm)"
+    "prompt_compressor=\"\"\"En utilisant la question et le contexte ci-dessous, conservez uniquement les extraits du contexte pouvant servir à répondre à la question, sans modifier le texte initial en contexte. Si aucune information n'est pertinente dans le contexte, ne conservez rien. \n",
+    "\n",
+    "Question : {question}\n",
+    "\n",
+    "Contexte : \n",
+    "\n",
+    "{context}\n",
+    "\"\"\"\n",
+    "compressor = LLMChainExtractor.from_llm(llm,prompt=PromptTemplate(\n",
+    "        template=prompt_compressor, input_variables=[\"context\", \"question\"]\n",
+    "    ))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50a146cd-14f4-4e87-800a-e4950830716a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -482,7 +502,7 @@
     "# Run chain\n",
     "qa_chain = RetrievalQA.from_chain_type(\n",
     "    llm,\n",
-    "    retriever=vectordb.as_retriever(),\n",
+    "    chain_type=\"stuff\", retriever=compression_retriever,\n",
     "    return_source_documents=True, verbose=True,\n",
     "    chain_type_kwargs={\"prompt\": QA_CHAIN_PROMPT}\n",
     ")"
@@ -933,7 +953,7 @@
     "# On garde en mémoire l'historique des messages\n",
     "# Return_messages = True signifie qu'on met les messages passés sous forme de liste, \n",
     "# et non de la forme d'un simple texte\n",
-    "from langchain.memory import ConversationBufferMemory\n",
+    "\n",
     "memory = ConversationBufferMemory(\n",
     "    memory_key=\"chat_history\",\n",
     "    return_messages=True)"
@@ -947,7 +967,7 @@
    "outputs": [],
    "source": [
     "# Le module ConversationalRetrievalChain gère la mémoire\n",
-    "from langchain.chains import ConversationalRetrievalChain\n",
+    "\n",
     "retriever=vectordb.as_retriever()\n",
     "qa_memory = ConversationalRetrievalChain.from_llm(\n",
     "    llm,\n",
@@ -1086,6 +1106,7 @@
    "outputs": [],
    "source": [
     "!pip install panel\n",
+    "import panel as pn\n",
     "pn.extension()"
    ]
   },
@@ -1096,7 +1117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import panel as pn\n",
+    "\n",
     "import param\n",
     "\n",
     "class cbfs(param.Parameterized):\n",
@@ -1243,7 +1264,13 @@
    "id": "80657b4d-d681-4578-8dcd-2748163fd775",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load model directly\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"mlabonne/llama-2-7b-guanaco\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"mlabonne/llama-2-7b-guanaco\", do_sample=True,temperature=0.1)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1251,7 +1278,10 @@
    "id": "cbeef1a1-ddc5-43ed-bf27-3718d911f7a1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gen_llama_chat = pipeline('text-generation', model = model, tokenizer=tokenizer,max_new_tokens=300)\n",
+    "llm = HuggingFacePipeline(pipeline=gen_llama_chat)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1259,7 +1289,21 @@
    "id": "27d8d3a5-6418-4736-93a3-1e15a4e92519",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Build prompt llama chat\n",
+    "template_chat = \"\"\"<s>[INST] <<SYS>>\n",
+    "\\n\n",
+    "Vous êtes un assistant conversationnel cordial et honnête, qui répond, uniquement en langue française, aux questions ou aux problèmes posés par un usager. Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer la réponse. \n",
+    "\\n<</SYS>>\n",
+    "\\n\n",
+    "À l'aide du contexte ci-dessous, répondez, uniquement en langue française, au problème suivant posé par un usager : {question}\n",
+    "\\n\\n\n",
+    "Contexte : \n",
+    "\\n\n",
+    "{context}\n",
+    "[/INST]\"\"\"\n",
+    "QA_CHAIN_PROMPT_chat = PromptTemplate.from_template(template_chat)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1267,7 +1311,15 @@
    "id": "12795cff-cb6d-4feb-929e-2436cb94811f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Run chain\n",
+    "qa_chain = RetrievalQA.from_chain_type(\n",
+    "    llm,\n",
+    "    retriever=vectordb.as_retriever(),\n",
+    "    return_source_documents=True, verbose=True,\n",
+    "    chain_type_kwargs={\"prompt\": QA_CHAIN_PROMPT_chat}\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1275,7 +1327,9 @@
    "id": "463dde45-e91b-43d8-b400-d152f854776f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "question = \"Je n'arrive pas à obtenir mon avis de situation\""
+   ]
   },
   {
    "cell_type": "code",
@@ -1283,7 +1337,9 @@
    "id": "876efb8c-02f2-4838-a52e-82ac2a75656a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result = qa_chain({\"query\": question})"
+   ]
   },
   {
    "cell_type": "code",
@@ -1291,7 +1347,9 @@
    "id": "7b98bdf9-7f09-459f-9994-27e102cafda2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result[\"result\"]"
+   ]
   },
   {
    "cell_type": "code",
