Ajout Llama cpp

--- a/Notebooks/Recap.ipynb
+++ b/Notebooks/Recap.ipynb
@@ -22,6 +22,8 @@
     "!pip install lark\n",
     "!pip install gpt4all\n",
     "! pip install accelerate\n",
+    "!pip install streamlit\n",
+    "!pip install llama-cpp-python\n",
     "# au terminal : huggingface-cli login puis token"
    ]
   },
@@ -57,7 +59,40 @@
     "from langchain.retrievers import ContextualCompressionRetriever\n",
     "from langchain.retrievers.document_compressors import LLMChainExtractor\n",
     "from langchain.memory import ConversationBufferMemory\n",
-    "from langchain.chains import ConversationalRetrievalChain"
+    "from langchain.chains import ConversationalRetrievalChain\n",
+    "from langchain.callbacks.manager import CallbackManager\n",
+    "from langchain.callbacks.streaming_stdout import StreamingStdOutCallbackHandler\n",
+    "from langchain.llms import LlamaCpp\n",
+    "import streamlit as st"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bd0f7df-9a1a-4911-9aee-c2a58095f48a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.callbacks.base import BaseCallbackHandler\n",
+    "class StreamDisplayHandler(BaseCallbackHandler):\n",
+    "    def __init__(self, container, initial_text=\"\", display_method='markdown'):\n",
+    "        self.container = container\n",
+    "        self.text = initial_text\n",
+    "        self.display_method = display_method\n",
+    "        self.new_sentence = \"\"\n",
+    "\n",
+    "    def on_llm_new_token(self, token: str, **kwargs) -> None:\n",
+    "        self.text += token\n",
+    "        self.new_sentence += token\n",
+    "\n",
+    "        display_function = getattr(self.container, self.display_method, None)\n",
+    "        if display_function is not None:\n",
+    "            display_function(self.text)\n",
+    "        else:\n",
+    "            raise ValueError(f\"Invalid display_method: {self.display_method}\")\n",
+    "\n",
+    "    def on_llm_end(self, response, **kwargs) -> None:\n",
+    "        self.text = \"\""
    ]
   },
   {
@@ -1265,23 +1300,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load model directly\n",
-    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"mlabonne/llama-2-7b-guanaco\")\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"mlabonne/llama-2-7b-guanaco\", do_sample=True,temperature=0.1)"
+    "# Chargement du llama2\n",
+    "import os\n",
+    "import s3fs\n",
+    "S3_ENDPOINT_URL = \"https://\" + os.environ[\"AWS_S3_ENDPOINT\"]\n",
+    "fs = s3fs.S3FileSystem(client_kwargs={'endpoint_url': S3_ENDPOINT_URL})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbeef1a1-ddc5-43ed-bf27-3718d911f7a1",
+   "id": "d8652f54-f832-4439-bd72-dd518af8c19b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_llama_chat = pipeline('text-generation', model = model, tokenizer=tokenizer,max_new_tokens=300)\n",
-    "llm = HuggingFacePipeline(pipeline=gen_llama_chat)"
+    "bucket = 'vlapegue/llama-2-7b-chat.Q5_K_M'\n",
+    "files = fs.ls(bucket)[-3:]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f15a04a7-e71a-44bc-b534-46e4241519fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(files[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96a5e6db-4f95-4791-88e0-70ecd58cdfd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fs.download(files[1],'llama-2-7b-chat.Q5_K_M.gguf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afbf0cbd-9cda-4fac-8cd9-0fa19116cdb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "callback_manager = CallbackManager([StreamingStdOutCallbackHandler()])\n",
+    "    # Verbose is required to pass to the callback manager\n",
+    "n_batch = 512\n",
+    "llm = LlamaCpp(\n",
+    "    model_path='./llama-2-7b-chat.Q5_K_M.gguf',\n",
+    "    n_gpu_layers=0,\n",
+    "    max_tokens = 8000,\n",
+    "    temperature = 0.1,\n",
+    "    n_batch=n_batch,\n",
+    "    f16_kv=True,\n",
+    "    use_mlock=True,\n",
+    "    n_ctx=2048,\n",
+    "    callback_manager=callback_manager,\n",
+    "    n_threads=8,\n",
+    "    verbose=True,\n",
+    "    streaming=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4023d25d-119c-4947-9ac4-bc310244ad0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"comment changer d'APE ?\"\n",
+    "max_tokens = 8000\n",
+    "temperature = 0.3\n",
+    "top_p = 0.1\n",
+    "echo = True\n",
+    "stop = [\"Q\", \"\\n\"]\n",
+    "\n",
+    "\n",
+    "# Define the parameters\n",
+    "model_output = llm(\n",
+    "       prompt,\n",
+    "       max_tokens=max_tokens,\n",
+    "       temperature=temperature,\n",
+    "       top_p=top_p,\n",
+    "       echo=echo\n",
+    "   )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3b03b8e-7890-4ba6-93c6-ef3d5f9fb8c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1293,7 +1406,7 @@
     "# Build prompt llama chat\n",
     "template_chat = \"\"\"<s>[INST] <<SYS>>\n",
     "\\n\n",
-    "Vous êtes un assistant conversationnel cordial et honnête, qui répond, uniquement en langue française, aux questions ou aux problèmes posés par un usager. Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer la réponse. \n",
+    "Vous êtes un assistant conversationnel cordial et honnête, qui oriente, uniquement en langue française, un usager qui a un problème ou pose une question. Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer la réponse. \n",
     "\\n<</SYS>>\n",
     "\\n\n",
     "À l'aide du contexte ci-dessous, répondez, uniquement en langue française, au problème suivant posé par un usager : {question}\n",
@@ -1365,7 +1478,9 @@
    "id": "fcc2e1df-c179-4fac-961c-2002885d152b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "question = \"comment changer d'APE ?\""
+   ]
   },
   {
    "cell_type": "code",
@@ -1373,7 +1488,9 @@
    "id": "c0364961-16cd-4ade-9c04-5f8c3e6e6c55",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result = qa_chain({\"query\": question})"
+   ]
   },
   {
    "cell_type": "code",
@@ -1381,7 +1498,9 @@
    "id": "bf0427bd-0b56-444e-b894-9b5ef6ecdae8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Llama2 avec compressor pour diminuer la taille du prompt"
+   ]
   },
   {
    "cell_type": "code",
@@ -1389,7 +1508,23 @@
    "id": "cdf37333-f426-4cbb-a2ec-ef1ba4c14a99",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prompt_compressor=\"\"\"<s>[INST] <<SYS>>\n",
+    "\\n\n",
+    "En utilisant la question et le contexte ci-dessous, votre réponse doit contenir exclusivement les citations, en langue française, des informations du contexte pouvant servir à répondre à la question. Si aucune information n'est pertinente dans le contexte, ne répondez rien. \n",
+    "\\n<</SYS>>\n",
+    "\\n\n",
+    "Question : {question}\n",
+    "\\n\\n\n",
+    "Contexte : \n",
+    "\\n\n",
+    "{context}\n",
+    "[/INST]\"\"\"\n",
+    "\n",
+    "compressor = LLMChainExtractor.from_llm(llm,prompt=PromptTemplate(\n",
+    "        template=prompt_compressor, input_variables=[\"context\", \"question\"]\n",
+    "    ))"
+   ]
   },
   {
    "cell_type": "code",
@@ -1397,7 +1532,12 @@
    "id": "f4e0e2a5-ba97-4d56-b31a-ccd88e0cde84",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "compression_retriever = ContextualCompressionRetriever(\n",
+    "    base_compressor=compressor,\n",
+    "    base_retriever=vectordb.as_retriever()\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1405,7 +1545,16 @@
    "id": "b6541f2a-9c37-41e4-b490-cb28ab2a1954",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Run chain\n",
+    "qa_chain = RetrievalQA.from_chain_type(\n",
+    "    llm,\n",
+    "    chain_type=\"stuff\",\n",
+    "    retriever=compression_retriever,\n",
+    "    return_source_documents=True, verbose=True,\n",
+    "    chain_type_kwargs={\"prompt\": QA_CHAIN_PROMPT_chat}\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
@@ -1413,7 +1562,9 @@
    "id": "1e6e3cc3-31ce-4dfe-964f-12a049c19cad",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "question = \"Je n'arrive pas à obtenir mon avis de situation\""
+   ]
   },
   {
    "cell_type": "code",
@@ -1421,7 +1572,9 @@
    "id": "9e4fe58b-ffdc-4ee5-9bca-a95796856e9b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result = qa_chain({\"query\": question})"
+   ]
   },
   {
    "cell_type": "code",
